Fixed hamburger on mobile

--- a/react_portfolio/src/Components/Navbar/Navbar.css
+++ b/react_portfolio/src/Components/Navbar/Navbar.css
@@ -1,3 +1,3 @@
-.navbarmenu {
+.navbar-menu {
     justify-content: center;
 }
